# tinymoe

./: .mclaude.sh  README.md  main.py  pyproject.toml
data/: functions.py  loader.py  projection.py
frontend/: frontend.py
image/: Dockerfile  build.sh
src/: args.py  infra.py  models.py  train.py
