[project]
name = "tinymoe"
version = "0.0.1"
description = "TinyMoE training"
requires-python = "==3.12.12"
dependencies = [
    "flyteidl",
    "flytekit",
    "flytekitplugins-kfpytorch",
    "ipython",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
cpu = [
    "torch",
    "torchao",
    "torchvision",
]
gpu = [
    "torch",
    "torchao",
    "torchvision",
]
dev = [
    "pytest",
    "ruff",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
